fix(SlideToggle): Shift down 1px

--- a/react/SlideToggle/SlideToggle.less
+++ b/react/SlideToggle/SlideToggle.less
@@ -105,5 +105,5 @@
   opacity: 0;
   transition: opacity 0.15s;
   position: relative;
-  top: 4px;
+  top: 5px;
 }
